--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer Pergunta</button>
 
 
-    <h3 id="respota">
-      <div>Perguta que fiz</div>
-      Sim!
-    </h3>
+    <h3 id="respota"> </h3>
 
   </div>
 </body>
