--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer Pergunta</button>
 
 
-    <h3 id="respota"> </h3>
+    <h3 id="resposta"> </h3>
 
   </div>
 </body>
