--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 
     <div class="container-2">
-      <div class="triangle">
-        <ion-icon name="triangle-outline"></ion-icon>
+      <div class="circle">
+        <ion-icon name="ellipse-outline"></ion-icon>
         <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer Pergunta</button>
       </div>
 
@@ -49,7 +49,7 @@
           <span>
             Revele seu destino
           </span>
-          <p class="number">7</p>
+          <p class="number">8</p>
 
         </h3>
       </div>
